# snipper

./: .gitignore  CMakeLists.txt  README.md
config/: default_config.json
include/app/: ConfigManager.h  SnipperApp.h
include/core/: SearchEngine.h  SnippetStore.h
include/models/: Snippet.h
include/platform/: ClipboardManager.h  HotkeyListener.h  PlatformUtils.h
scripts/: setup-path.ps1  setup-path.sh  snipper.ps1  snipper.sh
src/: main.cpp
src/app/: ConfigManager.cpp  SnipperApp.cpp
src/core/: SearchEngine.cpp  SnippetStore.cpp
src/models/: Snippet.cpp
src/platform/: ClipboardManager.cpp  HotkeyListener.cpp  PlatformUtils.cpp
tests/: test_config.cpp  test_snipper_app.cpp  test_snippet_store.cpp
